# touchstone

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  Dockerfile  README.md  action.yml  bugs.md  pyproject.toml  todo.md  touchstone_prover.py
.github/workflows/: ci.yml  publish.yml  smtcoq.yml
examples/: github-action-gate.yml  pre-commit-hook.sh
proofs/: Dockerfile.smtcoq  Dockerfile.trustbase  build_encoding.sh  build_intervals.sh  build_vcgen.sh  encoding_main.ml  generate_engine.sh  intervals_main.ml  json_to_python.py  touchstone_bitwise.v  touchstone_domains.v  touchstone_encoders.v  touchstone_encoding.v  touchstone_floats.v  touchstone_functor.v  touchstone_heap.v  touchstone_listmodel.v  touchstone_lowering.v  touchstone_ndshape.v  touchstone_obligations.v  touchstone_partial.v  touchstone_relyguarantee.v  touchstone_seplogic.v  touchstone_setmodel.v  touchstone_smtcoq.v  touchstone_strings.v  vcgen_main.ml  verify_all.sh  verify_coq.sh  verify_smtcoq.sh
touchstone/: __init__.py  __main__.py  _impl.py  _partriage.py  _sandbox_child.py  audit.py  benchmark.py  certificate.py  ci.py  cli.py  core.py  diagnostics.py  domains.py  engines.py  examples.py  inference.py  lsp.py  mcp.py  peer_bench.py  pytest_plugin.py  report.py  repro.py  sarif.py  smtcoq_export.py  soundinfer.py  theories.py  typeeval.py  typeinfer.py  vcgen.py
touchstone/_generated/: __init__.py  _transpile.py  encoders.json  encoders_rocq.py  encoding.json  encoding_rocq.py  intervals.json  intervals_rocq.py  vcgen.json  vcgen_rocq.py
